<resources>
    <string name="app_name">Excel Reader</string>
    <string name="sys_button_ok" translatable="false">OK</string>
    <string name="pg_toolsbar_note" translatable="false">Note</string>
    <string name="count_files" translatable="false">(%s files)</string>
    <string name="srl_component_falsify" formatted="false" translatable="false">%s falsify area,\n Represents the height[%.1fdp] of drag at run time,\n It does not show anything.</string>
    <string name="srl_header_update" translatable="false">\'Last Update\' M-d HH:mm</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="splash_slogan_2" translatable="false"><![CDATA[Any Time & Any Where]]></string>
    <string name="main_icon_all" translatable="false">ALL</string>
    <string name="main_icon_xlx" translatable="false">XLX</string>
    <string name="main_icon_pdf" translatable="false">PDF</string>
    <string name="main_icon_doc" translatable="false">DOC</string>
    <string name="main_icon_ppt" translatable="false">PPT</string>
    <string name="main_icon_txt" translatable="false">TXT</string>
    <string name="main_iocn_html" translatable="false">HTML</string>
    <string name="main_icon_rtf" translatable="false">RTF</string>
    <string name="all_files" translatable="false">All Files</string>
    <string name="excel_files" translatable="false">Excel Files</string>
    <string name="pdf_files" translatable="false">PDF Files</string>
    <string name="doc_files" translatable="false">DOC Files</string>
    <string name="ppt_files" translatable="false">PPT Files</string>
    <string name="txt_files" translatable="false">TXT Files</string>
    <string name="html_files" translatable="false">HTML Files</string>
    <string name="rtf_files" translatable="false">RTF Files</string>
    <string name="fav_files" translatable="false">Favorite Files</string>
    <string name="str_action_cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="sort_by">Sort by</string>
    <string name="deleting">Deleting …</string>
    <string name="str_action_share">Share</string>
    <string name="str_home">Home</string>
    <string name="str_recent">Recent</string>
    <string name="str_failed">Failed</string>
    <string name="str_no_files_yet">No files yet</string>
    <string name="invalid_page_number">Invalid page number</string>
    <string name="date_created">Date created</string>
    <string name="name_a_to_z">Name: A to Z</string>
    <string name="name_z_to_a">Name: Z to A</string>
    <string name="file_size_largest">File size: Ascending</string>
    <string name="file_size_minimum">File size: Descending</string>
    <string name="toast_exit_app">Press back again to exit</string>
    <string name="go_to_page">Go to page</string>
    <string name="enter_page_number">Enter page number</string>
    <string name="str_share_app_tittle">My application name</string>
    <string name="str_share_app_des"> "\nLet me recommend you this application\n\n"</string>
    <string name="str_action_choose_one">"Choose one"</string>
    <string name="rate_tittle">Enjoyed using Document Reader?</string>
    <string name="rate_content">We\'d really appreciate if you take a moment to share your experience with us and other users. It won\'t take more then a minute. Thank you for your support!</string>
    <string name="rate_us">Rate Us</string>
    <string name="file_details">File details</string>
    <string name="same_name">Same Name</string>
    <string name="dialog_rate_recoment">The best rating star</string>
    <string name="document_files">Document Files</string>
    <string name="str_recent_des">Recent Documents will appear here</string>
    <string name="dialog_confirm_delete_content">Are you sure want to delete? This action cannot be undone</string>
    <string name="invalid_characters">Invalid characters (@, #, $…)</string>
    <string name="all_reader2_search_files_hint">Search for files…</string>
    <string name="bottom_dialog_detail">Detail</string>
    <string name="dialog_confirm_delete">Delete</string>
    <string name="failed_to_rename_file">Failed to rename file</string>
    <string name="saved_path">Saved path:</string>
    <string name="size">Size</string>
    <string name="format">Format</string>
    <string name="created">Created</string>
    <string name="toolbar_tittle_choose_file">Select a file</string>
    <string name="toolbar_tittle_choose_language">Choose Language</string>
    <string name="splash_ads">This action may contains ads</string>
    <string name="splash_slogan_1">Access all your Documents</string>
    <string name="str_tittle_choose_file">Choose from storage</string>
    <string name="str_choose_file">Select file from storage</string>
    <string name="str_des_choose_file">You can select files from different folders on your devices</string>
    <string name="str_feed_back_app">FeedBack Document Reader app</string>
    <string name="navigation_feedback_or_suggestion">Feedback or suggestion</string>
    <string name="navigation_file_manager">File manager</string>
    <string name="navigation_rate_us">Rate us</string>
    <string name="navigation_family_apps">Family Apps (AD)</string>
    <string name="navigation_privacy_policy">Privacy policy</string>
    <string name="navigation_language">Language</string>
    <string name="str_action_search">Search</string>
    <string name="dialog_rate_content">How do you feel about the app? Your feedback is important to us</string>
    <string name="srl_content_empty">The content view in SmartRefreshLayout is empty. Do you forget to add it in xml layout file?</string>
    <string name="srl_header_pulling">Pull Down To Refresh</string>
    <string name="srl_header_release">Release To Refresh</string>
    <string name="srl_header_refreshing">Refreshing…</string>
    <string name="srl_header_loading">Wait For Loading…</string>
    <string name="srl_header_finish">Refresh Success</string>
    <string name="srl_header_failed">Refresh Failed</string>
    <string name="srl_header_secondary">Release To Second Floor</string>
    <string name="srl_footer_pulling">Pull Up To Load More</string>
    <string name="srl_footer_release">Release To Load More</string>
    <string name="srl_footer_loading">Loading…</string>
    <string name="srl_footer_refreshing">Wait For Refreshing…</string>
    <string name="srl_footer_finish">Load Success</string>
    <string name="srl_footer_failed">Load Failed</string>
    <string name="srl_footer_nothing">No More Data</string>
    <string name="toast_maximum_file_share">You can share 50 file once time!</string>
    <string name="str_action_ok">OK</string>
    <string name="str_action_close">Close</string>
    <string name="str_action_rate">Rate</string>
    <string name="str_action_sort">Sort</string>
    <string name="dialog_permission_required_title">Permission Required</string>
    <string name="dialog_permission_required_des">To read and edit documents on your device, please allow Document Reader to access all your files.</string>
    <string name="dialog_permission_required_allow_access">Allow access to manage all files</string>
    <string name="turn_on_permission_guide">* Go to set -&gt; Click Permissions -&gt; Turn on Storage permission</string>
    <string name="str_action_allow">Allow</string>
    <string name="str_select_all">Select All</string>
    <string name="x_selected">%s Selected</string>
    <string name="str_action_move_fav">Remove Favorite</string>
    <string name="dialog_move_fav">Move out of Favorite</string>
    <string name="dialog_remove_body">Are you sure you want to move the file(s) out of this folder?</string>
    <string name="removing">Removing…</string>
    <string name="menu_jump_to_page">Jump to page</string>
    <string name="menu_swipe_horizontal">Swipe horizontal</string>
    <string name="menu_swipe_vertical">Swipe vertical</string>
    <string name="menu_thumbnail">Thumbnail</string>
    <string name="str_action_go">Go</string>
    <string name="str_action_print">Print</string>
    <string name="str_action_more">More</string>
    <string name="toast_cant_share_file">Can\'t share file</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_passwrod_to_open">Enter Password to Open</string>
    <string name="dialog_password_invalid">Invalid password</string>
    <string name="toast_swipe_vertical_enable">"Vertical swipe enabled"</string>
    <string name="toast_swipe_horizontal_enable">"Horizontal swipe enabled"</string>
    <string name="toast_device_does_not_support_printing">Your device does not support printing</string>
    <string name="toast_cant_print_password_protected_pdf">Cannot print a password protected PDF file</string>
    <string name="toast_cannot_print_malformed_pdf">Cannot print a malformed PDF file</string>
    <string name="toast_cannot_print_unknown_error">Cannot print PDF file, Unknown error has occurred</string>
    <string name="str_vertical">Vertical</string>
    <string name="str_horizontal">Horizontal</string>
    <string name="toast_failed_low_memory">Failed! low memory</string>
    <string name="str_information">Information</string>
    <string name="dialog_exit_tittle">Do you want to exit ?</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="sodk_editor_color" translatable="false">Color</string>
    <string name="sodk_editor_background" translatable="false"> Background</string>
    <string name="GETTING_STARTED" translatable="false"> Getting Started.pdf</string>
    <string name="USER_GUIDE" translatable="false"> User Guide.pdf</string>
    <string name="articles_list_fragment_error_message" translatable="false"> Failed to get articles</string>
    <string name="articles_list_fragment_no_articles_found" translatable="false"> No articles found</string>
    <string name="ask_request_list_failed_request_message" translatable="false"> Message failed</string>
    <string name="belvedere_dialog_camera" translatable="false"> Camera</string>
    <string name="belvedere_dialog_gallery" translatable="false"> Gallery</string>
    <string name="belvedere_fam_desc_collapse_fam" translatable="false"> Collapse Floating Action Menu</string>
    <string name="belvedere_fam_desc_expand_fam" translatable="false"> Expand Floating Action Menu</string>
    <string name="belvedere_fam_desc_open_gallery" translatable="false"> Import file from gallery</string>
    <string name="belvedere_fam_desc_open_google_photos" translatable="false"> Import image from Google Photos</string>
    <string name="belvedere_image_stream_file_too_large" translatable="false"> File too large</string>
    <string name="belvedere_image_stream_title" translatable="false"> Photo library</string>
    <string name="search_menu_title" translatable="false"> Search</string>
    <string name="sodk_editor_file_name" translatable="false"> File Name</string>
    <string name="sodk_editor_no_documents_found" translatable="false">No documents found</string>
    <string name="sodk_editor_save" translatable="false">Save</string>
    <string name="rotate" translatable="false"> Rotate</string>
    <string name="dialog_sort_title">Sort By</string>
    <string name="dialog_sort_by_name">By Name</string>
    <string name="dialog_sort_by_date">By Date</string>
    <string name="dialog_sort_by_size">By Size</string>
    <string name="dialog_sort_order">Order</string>
    <string name="dialog_sort_ascending">Ascending</string>
    <string name="dialog_sort_descending">Descending</string>
    <string name="str_action_apply">Apply</string>
    <string name="str_go_to_set">Go to set</string>
    <string name="no_permissions">No permissions</string>
    <string name="recovery_authorization_to_all_files">Permission is required to access all files</string>
</resources>