<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:tag="layout/dialog_select_sort_0">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_8dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.87">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_vertical"
            android:text="@string/dialog_sort_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.arrowwould.excelreader.customviews.ItemSelectSort
                android:id="@+id/dialogSelectSort_byName"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:imgSort="@drawable/ic_sort_name"
                app:textNameSort="@string/dialog_sort_by_name" />

            <com.arrowwould.excelreader.customviews.ItemSelectSort
                android:id="@+id/dialogSelectSort_byDate"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:imgSort="@drawable/ic_sort_date"
                app:textNameSort="@string/dialog_sort_by_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"

            android:weightSum="2">

            <com.arrowwould.excelreader.customviews.ItemSelectSort
                android:id="@+id/dialogSelectSort_bySize"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:imgSort="@drawable/ic_file_size"
                app:textNameSort="@string/dialog_sort_by_size" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_vertical"
            android:text="@string/dialog_sort_order"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogSelectSort_radioGroup" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.arrowwould.excelreader.customviews.ItemSelectSort
                android:id="@+id/dialogSelectSort_oderAsc"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:imgSort="@drawable/ic_sort_asc"
                app:textNameSort="@string/dialog_sort_ascending" />

            <com.arrowwould.excelreader.customviews.ItemSelectSort
                android:id="@+id/dialogSelectSort_oderDesc"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                app:imgSort="@drawable/ic_sort_desc"
                app:textNameSort="@string/dialog_sort_descending" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_bt_ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_button_action_round_10"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/str_action_apply"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
