<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_radius_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitleDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/go_to_page"
            android:textColor="@color/text_light"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tvPageSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPageSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:alpha="0.64"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="(1-99)"
            android:textColor="@color/text_light"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_border_radius_12"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_page_number"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/text_light"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDialog" />

        <TextView
            android:id="@+id/btnCancel"
            style="@style/TextButtonDialog"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/str_action_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnOK"
            app:layout_constraintTop_toBottomOf="@+id/edtContent" />

        <TextView
            android:id="@+id/btnOK"
            style="@style/TextButtonDialog"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:text="@string/str_action_ok"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="80:32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtContent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
