<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="24dp"
    android:background="@drawable/bg_radius_12"
    android:paddingBottom="24dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="19dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/dialog_exit_tittle"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bt_negative"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_button_nagative"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/str_action_cancel"
        android:textColor="@color/colorTextNagativeButton"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_bt_positive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bt_positive"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_button_action_round_10"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/str_action_ok"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_bt_negative"
        app:layout_constraintTop_toTopOf="@+id/tv_bt_negative"
        app:textAllCaps="true" />

    <include
        layout="@layout/ads_container_native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bt_positive"
        app:layout_goneMarginTop="24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
