<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_radius_12"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:id="@+id/edit_text_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.artifex.sonui.editor.SOEditText
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/sodk_editor_file_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/breadcrumb_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_wrapper">

        <include layout="@layout/sodk_breadcrumb" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/breadcrumb_wrapper">

        <com.artifex.sonui.ExplorerListView
            android:id="@+id/fileListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:choiceMode="singleChoice"
            android:splitMotionEvents="false" />

        <com.artifex.sonui.editor.SOTextView
            android:id="@+id/no_documents_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/sodk_editor_no_documents_found"
            android:textColor="@color/sodk_so_ui_explorer_text_color"
            android:textSize="15sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/enumerate_progress"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="5dp"
            android:visibility="gone" />
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_46sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_button_nagative"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/str_action_cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:background="@drawable/bg_button_action_round_10"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/sodk_editor_save"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintTop_toTopOf="@id/cancel_button"
        app:textAllCaps="true" />

</androidx.constraintlayout.widget.ConstraintLayout>
